@@ -395,11 +395,6 @@ argument_list|(
 literal|false
 argument_list|)
 member_init_list|,
-name|terminated
-argument_list|(
-literal|false
-argument_list|)
-member_init_list|,
 name|isInFinish
 argument_list|(
 literal|false
@@ -507,7 +502,7 @@ expr_stmt|;
 block|}
 end_destructor
 begin_comment
-comment|/*!     \class QThread     \inmodule QtCore     \brief The QThread class provides a platform-independent way to     manage threads.      \ingroup thread      A QThread object manages one thread of control within the     program. To make code run in a separate thread, simply create a     QThread, change the thread affinity of the QObject(s) that     contain the code, and start() the new event loop. For example:      \snippet code/src_corelib_thread_qthread.cpp 0      The code inside the Worker's slot would then execute in a     separate thread. In this example, the QThread triggers the     Worker's doWork() slot upon starting, and frees the Worker's     memory upon terminating. However, you are free to connect the     Worker's slots to any signal, from any object, in any thread. It     is safe to connect signals and slots across different threads,     thanks to a mechanism called \l{Qt::QueuedConnection}{queued     connections}.      \note If you interact with an object, using any technique other     than queued signal/slot connections (e.g. direct function calls),     then the usual multithreading precautions need to be taken.      \note It is not possible to change the thread affinity of GUI     objects; they must remain in the main thread.       \section1 Managing threads      QThread will notifiy you via a signal     when the thread is started(), finished(), and terminated(), or     you can use isFinished() and isRunning() to query the state of     the thread.      You can stop the thread by calling exit() or quit(). In extreme     cases, you may want to forcibly terminate() an executing thread.     However, doing so is dangerous and discouraged. Please read the     documentation for terminate() and setTerminationEnabled() for     detailed information.      From Qt 4.8 onwards, it is possible to deallocate objects that     live in a thread that has just ended, by connecting the     finished() signal to QObject::deleteLater().      Use wait() to block the calling thread, until the other thread     has finished execution (or until a specified time has passed).      QThread also provides static, platform independent sleep     functions: sleep(), msleep(), and usleep() allow full second,     millisecond, and microsecond resolution respectively. These     functions were made public in Qt 5.0.      \note wait() and the sleep() functions should be unnecessary in     general, since Qt is an event-driven framework. Instead of     wait(), consider listening for the finished() signal. Instead of     the sleep() functions, consider using QTimer.      The static functions currentThreadId() and currentThread() return     identifiers for the currently executing thread. The former     returns a platform specific ID for the thread; the latter returns     a QThread pointer.       \section1 Subclassing QThread      Subclassing QThread is unnecessary for most purposes, since     QThread provides fully-functional thread management capabilities.     Nonetheless, QThread can be subclassed if you wish to implement     advanced thread management. This is done by adding new member     functions to the subclass, and/or by reimplementing run().     QThread's run() function is analogous to an application's main()     function -- it is executed when the thread is started, and the     thread will end when it returns.      \note Prior to Qt 4.4, the only way to use QThread for parallel     processing was to subclass it and implement the processing code     inside run(). This approach is now considered \b {bad practice};     a QThread should only manage a thread, not process data.      If you require event handling and signal/slot connections to     work in your thread, and if you reimplement run(), you must     explicitly call exec() at the end of your reimplementation:      \snippet code/src_corelib_thread_qthread.cpp 1      It is important to remember that a QThread object usually lives     in the thread where it was created, not in the thread that it     manages. This oft-overlooked detail means that a QThread's slots     will be executed in the context of its home thread, not in the     context of the thread it is managing. For this reason,     implementing new slots in a QThread subclass is error-prone and     discouraged.      \sa {Thread Support in Qt}, QThreadStorage, QMutex, QSemaphore, QWaitCondition,         {Mandelbrot Example}, {Semaphores Example}, {Wait Conditions Example} */
+comment|/*!     \class QThread     \inmodule QtCore     \brief The QThread class provides a platform-independent way to     manage threads.      \ingroup thread      A QThread object manages one thread of control within the     program. To make code run in a separate thread, simply create a     QThread, change the thread affinity of the QObject(s) that     contain the code, and start() the new event loop. For example:      \snippet code/src_corelib_thread_qthread.cpp 0      The code inside the Worker's slot would then execute in a     separate thread. In this example, the QThread triggers the     Worker's doWork() slot upon starting, and frees the Worker's     memory upon terminating. However, you are free to connect the     Worker's slots to any signal, from any object, in any thread. It     is safe to connect signals and slots across different threads,     thanks to a mechanism called \l{Qt::QueuedConnection}{queued     connections}.      \note If you interact with an object, using any technique other     than queued signal/slot connections (e.g. direct function calls),     then the usual multithreading precautions need to be taken.      \note It is not possible to change the thread affinity of GUI     objects; they must remain in the main thread.       \section1 Managing threads      QThread will notifiy you via a signal when the thread is     started() and finished(), or you can use isFinished() and     isRunning() to query the state of the thread.      You can stop the thread by calling exit() or quit(). In extreme     cases, you may want to forcibly terminate() an executing thread.     However, doing so is dangerous and discouraged. Please read the     documentation for terminate() and setTerminationEnabled() for     detailed information.      From Qt 4.8 onwards, it is possible to deallocate objects that     live in a thread that has just ended, by connecting the     finished() signal to QObject::deleteLater().      Use wait() to block the calling thread, until the other thread     has finished execution (or until a specified time has passed).      QThread also provides static, platform independent sleep     functions: sleep(), msleep(), and usleep() allow full second,     millisecond, and microsecond resolution respectively. These     functions were made public in Qt 5.0.      \note wait() and the sleep() functions should be unnecessary in     general, since Qt is an event-driven framework. Instead of     wait(), consider listening for the finished() signal. Instead of     the sleep() functions, consider using QTimer.      The static functions currentThreadId() and currentThread() return     identifiers for the currently executing thread. The former     returns a platform specific ID for the thread; the latter returns     a QThread pointer.       \section1 Subclassing QThread      Subclassing QThread is unnecessary for most purposes, since     QThread provides fully-functional thread management capabilities.     Nonetheless, QThread can be subclassed if you wish to implement     advanced thread management. This is done by adding new member     functions to the subclass, and/or by reimplementing run().     QThread's run() function is analogous to an application's main()     function -- it is executed when the thread is started, and the     thread will end when it returns.      \note Prior to Qt 4.4, the only way to use QThread for parallel     processing was to subclass it and implement the processing code     inside run(). This approach is now considered \b {bad practice};     a QThread should only manage a thread, not process data.      If you require event handling and signal/slot connections to     work in your thread, and if you reimplement run(), you must     explicitly call exec() at the end of your reimplementation:      \snippet code/src_corelib_thread_qthread.cpp 1      It is important to remember that a QThread object usually lives     in the thread where it was created, not in the thread that it     manages. This oft-overlooked detail means that a QThread's slots     will be executed in the context of its home thread, not in the     context of the thread it is managing. For this reason,     implementing new slots in a QThread subclass is error-prone and     discouraged.      \sa {Thread Support in Qt}, QThreadStorage, QMutex, QSemaphore, QWaitCondition,         {Mandelbrot Example}, {Semaphores Example}, {Wait Conditions Example} */
 end_comment
 begin_comment
 comment|/*!     \fn Qt::HANDLE QThread::currentThreadId()      Returns the thread handle of the currently executing thread.      \warning The handle returned by this function is used for internal     purposes and should not be used in any application code.      \warning On Windows, the returned value is a pseudo-handle for the     current thread. It can't be used for numerical comparison. i.e.,     this function returns the DWORD (Windows-Thread ID) returned by     the Win32 function getCurrentThreadId(), not the HANDLE     (Windows-Thread HANDLE) returned by the Win32 function     getCurrentThread(). */
@@ -522,13 +517,10 @@ begin_comment
 comment|/*!     \fn void QThread::start(Priority priority)      Begins execution of the thread by calling run(). The     operating system will schedule the thread according to the \a     priority parameter. If the thread is already running, this     function does nothing.      The effect of the \a priority parameter is dependent on the     operating system's scheduling policy. In particular, the \a priority     will be ignored on systems that do not support thread priorities     (such as on Linux, see http://linux.die.net/man/2/sched_setscheduler     for more details).      \sa run(), terminate() */
 end_comment
 begin_comment
-comment|/*!     \fn void QThread::started()      This signal is emitted from the associated thread when it starts executing,     before the run() function is called.      \sa finished(), terminated() */
+comment|/*!     \fn void QThread::started()      This signal is emitted from the associated thread when it starts executing,     before the run() function is called.      \sa finished() */
 end_comment
 begin_comment
-comment|/*!     \fn void QThread::finished()      This signal is emitted from the associated thread right before it finishes executing.      When this signal is emitted, the event loop has already stopped running.     No more events will be processed in the thread, except for deferred deletion events.     This signal can be connected to QObject::deleteLater(), to free objects in that thread.      \note If the associated thread was terminated using terminate(), it is undefined from     which thread this signal is emitted.      \sa started(), terminated() */
-end_comment
-begin_comment
-comment|/*!     \fn void QThread::terminated()      This signal is emitted when the thread is terminated.      It is undefined from which thread this signal is emitted.      \sa started(), finished() */
+comment|/*!     \fn void QThread::finished()      This signal is emitted from the associated thread right before it finishes executing.      When this signal is emitted, the event loop has already stopped running.     No more events will be processed in the thread, except for deferred deletion events.     This signal can be connected to QObject::deleteLater(), to free objects in that thread.      \note If the associated thread was terminated using terminate(), it is undefined from     which thread this signal is emitted.      \sa started() */
 end_comment
 begin_comment
 comment|/*!     \enum QThread::Priority      This enum type indicates how the operating system should schedule     newly created threads.      \value IdlePriority scheduled only when no other threads are            running.      \value LowestPriority scheduled less often than LowPriority.     \value LowPriority scheduled less often than NormalPriority.      \value NormalPriority the default priority of the operating            system.      \value HighPriority scheduled more often than NormalPriority.     \value HighestPriority scheduled more often than HighPriority.      \value TimeCriticalPriority scheduled as often as possible.      \value InheritPriority use the same priority as the creating            thread. This is the default. */
@@ -1166,7 +1158,7 @@ begin_comment
 comment|/*!     \fn void QThread::usleep(unsigned long usecs)      Forces the current thread to sleep for \a usecs microseconds.      \sa sleep(), msleep() */
 end_comment
 begin_comment
-comment|/*!     \fn void QThread::terminate()      Terminates the execution of the thread. The thread may or may not     be terminated immediately, depending on the operating system's     scheduling policies. Listen for the terminated() signal, or use     QThread::wait() after terminate(), to be sure.      When the thread is terminated, all threads waiting for the thread     to finish will be woken up.      \warning This function is dangerous and its use is discouraged.     The thread can be terminated at any point in its code path.     Threads can be terminated while modifying data. There is no     chance for the thread to clean up after itself, unlock any held     mutexes, etc. In short, use this function only if absolutely     necessary.      Termination can be explicitly enabled or disabled by calling     QThread::setTerminationEnabled(). Calling this function while     termination is disabled results in the termination being     deferred, until termination is re-enabled. See the documentation     of QThread::setTerminationEnabled() for more information.      \sa setTerminationEnabled() */
+comment|/*!     \fn void QThread::terminate()      Terminates the execution of the thread. The thread may or may not     be terminated immediately, depending on the operating system's     scheduling policies. Use QThread::wait() after terminate(), to be     sure.      When the thread is terminated, all threads waiting for the thread     to finish will be woken up.      \warning This function is dangerous and its use is discouraged.     The thread can be terminated at any point in its code path.     Threads can be terminated while modifying data. There is no     chance for the thread to clean up after itself, unlock any held     mutexes, etc. In short, use this function only if absolutely     necessary.      Termination can be explicitly enabled or disabled by calling     QThread::setTerminationEnabled(). Calling this function while     termination is disabled results in the termination being     deferred, until termination is re-enabled. See the documentation     of QThread::setTerminationEnabled() for more information.      \sa setTerminationEnabled() */
 end_comment
 begin_comment
 comment|/*!     \fn bool QThread::wait(unsigned long time)      Blocks the thread until either of these conditions is met:      \list     \li The thread associated with this QThread object has finished        execution (i.e. when it returns from \l{run()}). This function        will return true if the thread has finished. It also returns        true if the thread has not been started yet.     \li \a time milliseconds has elapsed. If \a time is ULONG_MAX (the         default), then the wait will never timeout (the thread must         return from \l{run()}). This function will return false if the         wait timed out.     \endlist      This provides similar functionality to the POSIX \c     pthread_join() function.      \sa sleep(), terminate() */
