@@ -1451,13 +1451,6 @@ name|QThread
 operator|::
 name|InheritPriority
 expr_stmt|;
-name|bool
-name|terminated
-init|=
-name|d
-operator|->
-name|terminated
-decl_stmt|;
 name|void
 modifier|*
 name|data
@@ -1474,16 +1467,6 @@ operator|.
 name|unlock
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|terminated
-condition|)
-emit|emit
-name|thr
-operator|->
-name|terminated
-argument_list|()
-emit|;
 emit|emit
 name|thr
 operator|->
@@ -1517,12 +1500,6 @@ name|locker
 operator|.
 name|relock
 argument_list|()
-expr_stmt|;
-name|d
-operator|->
-name|terminated
-operator|=
-literal|false
 expr_stmt|;
 name|QAbstractEventDispatcher
 modifier|*
@@ -2305,12 +2282,6 @@ literal|false
 expr_stmt|;
 name|d
 operator|->
-name|terminated
-operator|=
-literal|false
-expr_stmt|;
-name|d
-operator|->
 name|returnCode
 operator|=
 literal|0
@@ -2753,15 +2724,6 @@ operator|)
 argument_list|)
 argument_list|)
 argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|d
-operator|->
-name|terminated
-operator|=
-literal|true
 expr_stmt|;
 block|}
 endif|#
