@@ -1500,13 +1500,6 @@ name|QThread
 operator|::
 name|InheritPriority
 expr_stmt|;
-name|bool
-name|terminated
-init|=
-name|d
-operator|->
-name|terminated
-decl_stmt|;
 name|void
 modifier|*
 modifier|*
@@ -1532,16 +1525,6 @@ operator|.
 name|unlock
 argument_list|()
 expr_stmt|;
-if|if
-condition|(
-name|terminated
-condition|)
-emit|emit
-name|thr
-operator|->
-name|terminated
-argument_list|()
-emit|;
 emit|emit
 name|thr
 operator|->
@@ -1570,12 +1553,6 @@ name|locker
 operator|.
 name|relock
 argument_list|()
-expr_stmt|;
-name|d
-operator|->
-name|terminated
-operator|=
-literal|false
 expr_stmt|;
 name|QAbstractEventDispatcher
 modifier|*
@@ -1879,12 +1856,6 @@ literal|false
 expr_stmt|;
 name|d
 operator|->
-name|terminated
-operator|=
-literal|false
-expr_stmt|;
-name|d
-operator|->
 name|exited
 operator|=
 literal|false
@@ -2142,12 +2113,6 @@ argument_list|,
 literal|0
 argument_list|)
 expr_stmt|;
-name|d
-operator|->
-name|terminated
-operator|=
-literal|true
-expr_stmt|;
 name|QThreadPrivate
 operator|::
 name|finish
@@ -2298,12 +2263,6 @@ name|finished
 condition|)
 block|{
 comment|// thread was terminated by someone else
-name|d
-operator|->
-name|terminated
-operator|=
-literal|true
-expr_stmt|;
 name|QThreadPrivate
 operator|::
 name|finish
@@ -2407,12 +2366,6 @@ operator|->
 name|terminatePending
 condition|)
 block|{
-name|d
-operator|->
-name|terminated
-operator|=
-literal|true
-expr_stmt|;
 name|QThreadPrivate
 operator|::
 name|finish
